--- a/10-calendar-backend/.env
+++ b/10-calendar-backend/.env
@@ -1,1 +1,3 @@
 PORT=4000
+DB_CNN= mongodb://localhost:27017/test?readPreference=primary&appname=MongoDB%20Compass&ssl=false
+SECRETE_JWT_SEED=HOLSdfosfogdslgj9483590385kndfgjkljldskjfglkjdslgkjldsk
